--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title site>belovm937-pixel.github.io</title>
   <title>Максим Белов – QA Engineer</title>
   <link rel="icon" type="image/png" sizes="64x64" href="favicon.png">
-  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="card">
@@ -43,4 +43,5 @@
   
     <div class="footer">© 2025 Максим Белов</div>
   </div>
+
 
