--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
       <p>Email: <span class="hidden">belov937@gmail.com</span></p>
       <p>Телефон: <span class="hidden">+7 930 345-45-26</span></p>
     </div>
-
+<script> src="js.js"</script>
   
     <div class="footer">© 2025 Максим Белов</div>
   </div>
+
 </body>
