Добавил надпись The Best

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Максим Белов – QA Engineer</title>
+  <title>Максим Белов – The Best QA Engineer</title>
   <link rel="icon" type="image/png" sizes="64x64" href="favicon.png">
   <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
   <div class="card">
     <h1>Максим Белов</h1>
-    <h2>QA Engineer</h2>
+    <h2>The Best QA Engineer</h2>
 
   <div class="section">
       <h3>Профиль</h3>
