Добавил новый параграф

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
     <div class="section">
       <h3>Обо мне</h3>
-      <p>Занимаюсь тестированием фронтенда, бэкенда и мобильных приложений. Стремлюсь к автоматизации процессов и улучшению качества продукта.</p>
+      <p>*Занимаюсь тестированием фронтенда, бэкенда и мобильных приложений.</p>
+      <p>*Стремлюсь к автоматизации процессов и улучшению качества продукта.</p>
+      <p>*Проактивная работа по построению процессов</p>
     </div>
 
     <div class="section">
